collection/components/homepageModules/popups/newsletter-popup.css
ks-newsletter-popup {
    display: block;
}

ks-newsletter-popup form {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;

    height: 100%;
    width: 100%;
    max-width: 720px;
}

ks-newsletter-popup .info {
    padding: 60px 60px 20px 60px;
    fill: #252525;

    -webkit-box-flex: 1;

        -ms-flex: 1 0 auto;

            flex: 1 0 auto;
    min-height: 10px;
}

ks-newsletter-popup .info .top {
    width: 100%;
    margin-bottom: 10px;
    font-size: initial;
    max-height: 30px;
}

ks-newsletter-popup .info .heading {
    width: 100%;
    font-family: var(--font-emphasis);
    font-size: initial;
    max-height: 80px;
    margin-bottom: 10px;
}

ks-newsletter-popup .info p {
    text-align: center;
    margin-top: 10px;
}

ks-newsletter-popup .buttons {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    min-height: 10px;
    margin-top: 30px;
}

ks-newsletter-popup .buttons > * {
    -webkit-box-flex: 1;
        -ms-flex: 1;
            flex: 1;
}


ks-newsletter-popup ks-input-check {
    margin: 20px;

    font-size: 13px;
    line-height: 18px;
}

ks-newsletter-popup .email-form {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

ks-newsletter-popup .email-form > * { margin-bottom: 0px; }
ks-newsletter-popup .email-form > * input { height: 60px; }
ks-newsletter-popup .email-form > ks-button { width: 30%; }
ks-newsletter-popup .email-form > ks-input-text { width: 100%; }


@media (max-width: 720px) {
    ks-newsletter-popup .info .heading {
        max-height: 50px;
    }
}

@media (max-width: 540px) {
    ks-newsletter-popup .info {
        padding: 70px 25px 20px 25px;
        min-height: 180px;
    }

    ks-newsletter-popup .info .top {
        display: none;
    }

    ks-newsletter-popup .info p {
        font-size: 13px;
    }

    ks-newsletter-popup ks-input-check {
        font-size: 11px;
        line-height: 16px;
    }

    ks-newsletter-popup .email-form {
        display: block;
    }
    
    ks-newsletter-popup .email-form > ks-button { width: 100%; }

    ks-newsletter-popup .buttons { 
        display: block;
        margin-top: 0px;
    }
    ks-newsletter-popup .buttons > *:first-child { border-bottom: 1px solid #3a3a3a; }

    ks-newsletter-popup ks-input-check {
        margin: 15px;
    }

    ks-newsletter-popup .info .heading {
        width: 100%;
        max-height: 40px;
    }
}

